--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <button onclick="startGame()">START GAME</button>
         <button onclick="newCard()">NEW CARD</button>
         <p id="player-el"></p>
+        <button id="restart" onclick="window.location.reload()">restart</button>
         <script src="index.js"></script>
     </body>
 </html>
